rkhunterで検知された内容からちょっと修正

--- a/templates/ubuntu_rkhunter.conf
+++ b/templates/ubuntu_rkhunter.conf
@@ -590,6 +590,9 @@ DISABLE_TESTS=suspscan hidden_ports hidden_procs deleted_files packet_cap_apps a
 #
 # The default value is the null string.
 #
+SCRIPTWHITELIST=/usr/bin/egrep
+SCRIPTWHITELIST=/usr/bin/fgrep
+SCRIPTWHITELIST=/usr/bin/which
 SCRIPTWHITELIST=/bin/egrep
 SCRIPTWHITELIST=/bin/fgrep
 SCRIPTWHITELIST=/bin/which
