scriptwhitelistを利用側で書き換えられるように変更

--- a/templates/ubuntu_rkhunter.conf
+++ b/templates/ubuntu_rkhunter.conf
@@ -590,15 +590,14 @@ DISABLE_TESTS=suspscan hidden_ports hidden_procs deleted_files packet_cap_apps a
 #
 # The default value is the null string.
 #
-SCRIPTWHITELIST=/usr/bin/egrep
-SCRIPTWHITELIST=/usr/bin/fgrep
-SCRIPTWHITELIST=/usr/bin/which
-SCRIPTWHITELIST=/bin/egrep
-SCRIPTWHITELIST=/bin/fgrep
-SCRIPTWHITELIST=/bin/which
-SCRIPTWHITELIST=/usr/bin/ldd
+{% if rkhunter_script_whitelist is defined %}
+{% if rkhunter_script_whitelist|length > 0 %}
+{% for item in rkhunter_script_whitelist %}
+SCRIPTWHITELIST={{ item }}
+{% endfor %}
+{% endif %}
+{% endif %}
 #SCRIPTWHITELIST=/usr/bin/lwp-request
-SCRIPTWHITELIST=/usr/sbin/adduser
 #SCRIPTWHITELIST=/usr/sbin/prelink
 #SCRIPTWHITELIST=/usr/sbin/unhide.rb
 
